changed Ltrian to cdef but it's slower

--- a/1. source/Test and run functions.ipynb
+++ b/1. source/Test and run functions.ipynb
@@ -26,8 +26,8 @@
     "\n",
     "# from B222_jfunc_cython_v1 import compute_all_B222\n",
     "\n",
-    "from babiscython_v4_ubuntu import Ltrian as L\n",
-    "from babiscython_v4_ubuntu import BubN\n",
+    "#from babiscython_v4_ubuntu import Ltrian as L\n",
+    "#from babiscython_v4_ubuntu import BubN\n",
     "import gmpy2 as gm\n",
     "from gmpy2 import *\n",
     "import time\n",
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08f805d5",
+   "id": "3db900a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,20 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9a57ff80",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = time.time()\n",
-    "%prun -s cumulative compute_all_B222()\n",
-    "print(\"time:\", time.time()-start_time)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "182cbc45",
    "metadata": {},
    "outputs": [
     {
@@ -365,11 +353,23 @@
       "2 0\n",
       "1 0\n",
       "0 0\n",
-      "--- 21.50688099861145 seconds ---\n",
-      "time: 21.64621329307556\n"
+      "--- 43.40129852294922 seconds ---\n",
+      " time: 43.598796129226685\n"
      ]
     }
    ],
+   "source": [
+    "start_time = time.time()\n",
+    "%prun -s cumulative compute_all_B222()\n",
+    "print(\"time:\", time.time()-start_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182cbc45",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "start_time = time.time()\n",
     "compute_all_B222()\n",
@@ -391,109 +391,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbebf5e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gamma(mpfr('0.1'))-gamma(0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cbbff13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def coef_dim_gen_orig(expnum, expden):\n",
-    "    return gamma(expnum+3/2)*gamma(expden-expnum-3/2)/gamma(expden)/const_pi()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa547e77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%cython \n",
-    "coef_dim_gen_cache = {}\n",
-    "cpdef long double coef_dim_gen(long long expnum, long long expden):\n",
-    "    global coef_dim_gen_cache\n",
-    "    \n",
-    "    cdef long double lookup_val, val\n",
-    "        \n",
-    "    if expden == 1:\n",
-    "        return (-1)**(expnum + 1)\n",
-    "    if expden < 1:\n",
-    "        return 0 \n",
-    "    if expden > 1:\n",
-    "        if (expnum,expden) in coef_dim_gen_cache:\n",
-    "            return coef_dim_gen_cache[(expnum,expden)]\n",
-    "        else:\n",
-    "            val = (coef_dim_gen(expnum, expden-1)*(5 - 2*expden + 2*expnum))/(2 - 2*expden)\n",
-    "            coef_dim_gen_cache[(expnum,expden)] = val\n",
-    "            return val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85271375",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coef_dim_gen2_cache = {}\n",
-    "def coef_dim_gen2(expnum, expden):\n",
-    "    global coef_dim_gen2_cache\n",
-    "           \n",
-    "    if expden == 1:\n",
-    "        return mpfr((-1)**(expnum + 1))\n",
-    "    if expden < 1:\n",
-    "        return 0 \n",
-    "    if expden > 1:\n",
-    "        if (expnum,expden) in coef_dim_gen2_cache:\n",
-    "            return coef_dim_gen2_cache[(expnum,expden)]\n",
-    "        else:\n",
-    "            val = (coef_dim_gen2(expnum, expden-1)*(5 - 2*expden + 2*expnum))/(2 - 2*expden)\n",
-    "            coef_dim_gen2_cache[(expnum,expden)] = val\n",
-    "            return val"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09e79c77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expden = 100\n",
-    "expnum = 1\n",
-    "print(coef_dim_gen(expnum,expden))\n",
-    "print(coef_dim_gen2(expnum,expden))\n",
-    "print(coef_dim_gen_orig(mpfr(expnum),mpfr(expden)))\n",
-    "print(mpfr(coef_dim_gen(expnum,expden))-coef_dim_gen_orig(mpfr(expnum),mpfr(expden)))\n",
-    "print(mpfr(coef_dim_gen2(expnum,expden))-coef_dim_gen_orig(mpfr(expnum),mpfr(expden)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc541fa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(coef_dim_gen_cache)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "adaabcca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "J(0,0,0,2,1,1,k21,k22,k23)"
+    "J(1,2,3,6,7,8,k21,k22,k23)"
    ]
   },
   {
@@ -531,28 +433,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdfc2890",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cache = {}\n",
-    "def lcs(s1, s2):\n",
-    "  global cache\n",
-    "  if len(s1) == 0 or len(s2) == 0:\n",
-    "      return 0\n",
-    "  if (s1, s2) in cache:\n",
-    "      return cache[(s1, s2)]\n",
-    "  else:\n",
-    "      if s1[-1] == s2[-1]:\n",
-    "          cache[(s1, s2)] = 1 + lcs(s1[:-1], s2[:-1])\n",
-    "      else:\n",
-    "          cache[(s1, s2)] = max(lcs(s1[:-1], s2), lcs(s1, s2[:-1]))\n",
-    "  return cache[(s1, s2)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4b05c5a2",
    "metadata": {},
    "outputs": [],
@@ -571,6 +451,182 @@
     "%prun -s cumulative test_J()\n",
     "print(\"time:\", time.time()-start_time)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c9944541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import marshal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dce4b007",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xa9\\x04\\xe9\\x00\\x00\\x00\\x00\\xe9\\x01\\x00\\x00\\x00\\xe9\\x02\\x00\\x00\\x00\\xe9\\x03\\x00\\x00\\x00'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(marshal.dumps((0,1,2,3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15baf0d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import timeit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f983d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(timeit.timeit('marshal.dumps((0,1,2,3,4,5,6,7,8))','import marshal',number = 1000000))\n",
+    "print(timeit.timeit('hash((0,1,2,3,4,5,6,7,8))',number = 1000000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b2470d50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('hit cache! Args:', 0, 3, 0, 0, 0, 0, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 2, 0, 0, 0, 0, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 1, 0, 0, 0, 0, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 3, 0, 0, 0, 1, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 2, 0, 0, 0, 1, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 1, 0, 0, 0, 1, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 3, 0, 1, 0, 0, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 2, 0, 1, 0, 0, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 1, 0, 1, 0, 0, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 3, 0, 1, 0, 1, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 2, 0, 1, 0, 1, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 1, 0, 1, 0, 1, 0, 7, 7)\n",
+      "('hit cache! Args:', 0, 3, 0, 0, 0, 0, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 2, 0, 0, 0, 0, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 1, 0, 0, 0, 0, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 3, 0, 0, 0, 1, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 2, 0, 0, 0, 1, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 1, 0, 0, 0, 1, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 3, 0, 1, 0, 0, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 2, 0, 1, 0, 0, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 1, 0, 1, 0, 0, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 3, 0, 1, 0, 1, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 2, 0, 1, 0, 1, 0, 7, 8)\n",
+      "('hit cache! Args:', 0, 1, 0, 1, 0, 1, 0, 7, 8)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7.215875761236887e-14"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from babiscython_v4_ubuntu import TriaN\n",
+    "from Jfunc_cython_v4 import computeJ as J\n",
+    "\n",
+    "kpeak1 = -0.034\n",
+    "kpeak2 = -0.001\n",
+    "kpeak3 = -0.000076\n",
+    "kpeak4 = -0.0000156\n",
+    "kuv1 = 0.069\n",
+    "kuv2 = 0.0082\n",
+    "kuv3 = 0.0013\n",
+    "kuv4 = 0.0000135\n",
+    "kpeak1 = mpfr(str(kpeak1))\n",
+    "kpeak2 = mpfr(str(kpeak2))\n",
+    "kpeak3 = mpfr(str(kpeak3))\n",
+    "kpeak4 = mpfr(str(kpeak4))\n",
+    "kuv1 = mpfr(str(kuv1))\n",
+    "kuv2 = mpfr(str(kuv2))\n",
+    "kuv3 = mpfr(str(kuv3))\n",
+    "kuv4 = mpfr(str(kuv4))\n",
+    "\n",
+    "mass1 = -kpeak1 - 1j*kuv1\n",
+    "mass1conj = -kpeak1 + 1j*kuv1\n",
+    "mass2 = -kpeak2 - 1j*kuv2\n",
+    "mass2conj = -kpeak2 + 1j*kuv2\n",
+    "mass3 = -kpeak3 - 1j*kuv3\n",
+    "mass3conj = -kpeak3 + 1j*kuv3\n",
+    "mass4 = -kpeak4 - 1j*kuv4\n",
+    "mass4conj = -kpeak4 + 1j*kuv4\n",
+    "\n",
+    "k21 = mpfr(0.5)\n",
+    "k22 = mpfr(0.5)\n",
+    "k23 = mpfr(0.5)\n",
+    "\n",
+    "n1 = -1\n",
+    "n2 = 3\n",
+    "n3 = -1\n",
+    "\n",
+    "d1=3\n",
+    "d2=3\n",
+    "d3=3\n",
+    "\n",
+    "m1=mass1\n",
+    "m2=mass1\n",
+    "m3=mass1\n",
+    "\n",
+    "\n",
+    "# TriaN(d1,d2,d3,k21,k22,k23,m1,m2,m3)\n",
+    "J(n1,n2,n3,d1,d2,d3,k21,k22,k23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c165168a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"(1, 1, 1, 3, 3, 3, mpfr('0.5',190), mpfr('0.5',190), mpfr('0.5',190))\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str((n1,n2,n3,d1,d2,d3,k21,k22,k23))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85a5e679",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
