--- a/1. source/Test and run functions.ipynb
+++ b/1. source/Test and run functions.ipynb
@@ -21,9 +21,7 @@
     "import numpy as np\n",
     "import os\n",
     "import sys\n",
-    "from functools import lru_cache\n",
-    "import pandas as pd\n",
-    "\n",
+    "import config\n",
     "# from B222_jfunc_cython_v1 import compute_all_B222\n",
     "\n",
     "#from babiscython_v4_ubuntu import Ltrian as L\n",
@@ -353,8 +351,8 @@
       "2 0\n",
       "1 0\n",
       "0 0\n",
-      "--- 43.40129852294922 seconds ---\n",
-      " time: 43.598796129226685\n"
+      "--- 57.48048210144043 seconds ---\n",
+      " time: 57.652300119400024\n"
      ]
     }
    ],
@@ -455,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c9944541",
+   "id": "e3d617bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,26 +462,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "dce4b007",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'\\xa9\\x04\\xe9\\x00\\x00\\x00\\x00\\xe9\\x01\\x00\\x00\\x00\\xe9\\x02\\x00\\x00\\x00\\xe9\\x03\\x00\\x00\\x00'\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(marshal.dumps((0,1,2,3)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15baf0d3",
+   "execution_count": 4,
+   "id": "1a50cef7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,58 +472,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2f983d5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(timeit.timeit('marshal.dumps((0,1,2,3,4,5,6,7,8))','import marshal',number = 1000000))\n",
-    "print(timeit.timeit('hash((0,1,2,3,4,5,6,7,8))',number = 1000000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b2470d50",
+   "execution_count": 8,
+   "id": "262a9ecd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('hit cache! Args:', 0, 3, 0, 0, 0, 0, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 2, 0, 0, 0, 0, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 1, 0, 0, 0, 0, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 3, 0, 0, 0, 1, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 2, 0, 0, 0, 1, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 1, 0, 0, 0, 1, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 3, 0, 1, 0, 0, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 2, 0, 1, 0, 0, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 1, 0, 1, 0, 0, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 3, 0, 1, 0, 1, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 2, 0, 1, 0, 1, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 1, 0, 1, 0, 1, 0, 7, 7)\n",
-      "('hit cache! Args:', 0, 3, 0, 0, 0, 0, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 2, 0, 0, 0, 0, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 1, 0, 0, 0, 0, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 3, 0, 0, 0, 1, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 2, 0, 0, 0, 1, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 1, 0, 0, 0, 1, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 3, 0, 1, 0, 0, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 2, 0, 1, 0, 0, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 1, 0, 1, 0, 0, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 3, 0, 1, 0, 1, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 2, 0, 1, 0, 1, 0, 7, 8)\n",
-      "('hit cache! Args:', 0, 1, 0, 1, 0, 1, 0, 7, 8)\n"
+      "0.0010700000129872933\n",
+      "0.0001238999975612387\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(timeit.timeit('marshal.dumps((0,1,2,3,4,5,6,7,8))','import marshal',number = 1000))\n",
+    "print(timeit.timeit('hash((0,1,2,3,4,5,6,7,8))',number = 1000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "45cb6fcc",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
        "7.215875761236887e-14"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,17 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c165168a",
+   "execution_count": 7,
+   "id": "3b2fd455",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"(1, 1, 1, 3, 3, 3, mpfr('0.5',190), mpfr('0.5',190), mpfr('0.5',190))\""
+       "\"(-1, 3, -1, 3, 3, 3, mpfr('0.5',190), mpfr('0.5',190), mpfr('0.5',190))\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,8 +581,318 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "406434bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if None:\n",
+    "    print(\"2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "941c818f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_eg = {}\n",
+    "dict_eg[\"diogo\"]=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d385ba45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_eg.get(\"diog\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1dec56ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "mpc() requires numeric or string argument",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_27830/2301450701.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmpc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: mpc() requires numeric or string argument"
+     ]
+    }
+   ],
+   "source": [
+    "mpc(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e1f67fd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "23df7aec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ea8e6635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=mpc(1+2j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "30163652",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpc('1.0+2.0j',(190,190))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1f5713e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpfr('1.0',190)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.real"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dc5b4036",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpfr('2.0',190)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.imag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0232d4f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "442aea0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.Ltrian_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8b9b654b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from config import Ltrian_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "23cf0696",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ltrian_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "77516904",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ltrian_cache[\"diogo\"]=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c7f9b503",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'diogo': 1}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ltrian_cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4ff26c51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cb53fc65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "works\n"
+     ]
+    }
+   ],
+   "source": [
+    "if mpc(0):\n",
+    "    print('works')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e47acbe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "complex() first argument must be a string or a number, not 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_4213/3181197830.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcomplex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: complex() first argument must be a string or a number, not 'NoneType'"
+     ]
+    }
+   ],
+   "source": [
+    "complex(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "85a5e679",
+   "id": "b75461d2",
    "metadata": {},
    "outputs": [],
    "source": []
