Bispectrum one-loop in new basis

--- a/1. source/Test and run functions.ipynb
+++ b/1. source/Test and run functions.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7a6f8241",
+   "id": "d3199424",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e9d3b39d",
+   "execution_count": 2,
+   "id": "fadff83b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "79e125ae",
+   "id": "ce418ba0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "94cf4f29",
+   "id": "555e2d8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2b733198",
+   "id": "d5e075ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "913129dc",
    "metadata": {},
    "outputs": [],
@@ -142,8 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "23068d0f",
+   "execution_count": 9,
+   "id": "7159f3b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,35 +154,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
+   "id": "40835078",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # define in and out folders\n",
+    "# ctabfolder = '../3. Ctabs/P13ctabks/'\n",
+    "# outputfolder = '../2. Jmat_loopvals/P13_Jmat_cython/'\n",
+    "\n",
+    "# filelist = [f for f in os.listdir(ctabfolder) if not f.startswith('.')]\n",
+    "\n",
+    "# def get_ks(filename):\n",
+    "# \t# filename = 'B222ctab_' + k1str + '_' + k2str + '_' + k3str + '_.csv'\n",
+    "# \tk1 = mpfr(str.split(filename,'_')[1])\n",
+    "# \treturn k1\n",
+    "\n",
+    "# def computeker(i1, k2, ctab_ns, ctab_coefs):\n",
+    "# \tmpfr0 = mpfr(0)\n",
+    "# \tnumker = len(ctab_coefs)\n",
+    "# \tres = 0\n",
+    "# \tfor i in range(numker):\n",
+    "# \t\tif ctab_coefs[i] != 0:\n",
+    "# \t\t\tres += ctab_coefs[i]*J(-ctab_ns[i,0], -ctab_ns[i,1], 0, i1, -1, -1, k2, mpfr0, mpfr0)\t\t\t\n",
+    "# \treturn res\n",
+    "\n",
+    "# def find_ctab(k1):\n",
+    "#     for filename in filelist:\n",
+    "#         if str(k1) in filename:\n",
+    "#             return filename\n",
+    "\n",
+    "# def compute_P13_jmat(k1):\n",
+    "\n",
+    "#     k12 = mpfr(k1)**2\n",
+    "#     mpfr0 = mpfr(0)\n",
+    "#     i_func = 1\n",
+    "\n",
+    "#     ctab_filename = find_ctab(k1)\n",
+    "#     print(ctab_filename)\n",
+    "#     ctab_load = np.loadtxt(ctabfolder + ctab_filename, dtype = object)\n",
+    "#     ctab = np.zeros((len(ctab_load),3), dtype = object)\n",
+    "    \n",
+    "#     print(ctab_load)\n",
+    "\n",
+    "#     for i in range(len(ctab)):\n",
+    "#         ctab[i, 0] = round(float(ctab_load[i, 0]))\n",
+    "#         ctab[i, 1] = round(float(ctab_load[i, 1]))\n",
+    "#         ctab[i, 2] = float(str(ctab_load[i, 2]))\n",
+    "\n",
+    "#     ctab_ns = ctab[:,0:2].astype(int)\n",
+    "#     ctab_coefs = ctab[:,2].astype(float)\n",
+    "\n",
+    "    \n",
+    "#     numker = len(ctab_coefs)\n",
+    "#     Jtriantable = np.empty([numker,3],dtype=float)\n",
+    "#     # clear cache\n",
+    "#     config.Ltrian_cache.clear()\n",
+    "#     config.TriaN_cache.clear()\n",
+    "  \n",
+    "#     for i in range(numker):\n",
+    "#         Jtriantable[i] = [ctab_ns[i,0],ctab_ns[i,1],J(-ctab_ns[i,0], -ctab_ns[i,1], 0, i_func, -1, -1, k12, mpfr0, mpfr0)]\n",
+    "    \n",
+    "#     print(ctab_coefs)\n",
+    "    \n",
+    "#     tot = np.dot(Jtriantable[:,2],ctab_coefs)\n",
+    "    \n",
+    "#     # Output table\n",
+    "#     return (Jtriantable,tot)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "adaabcca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-7.957747154594769e-08"
+       "-0.0001613685405474843"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "k21 = mpfr('0.1')**2\n",
-    "k22 = mpfr(0.199356)**2\n",
-    "k23 = mpfr(0.124006)**2\n",
+    "mpfr0 = mpfr(0)\n",
+    "k21 = mpfr('0.01447')**2\n",
+    "# k22 = mpfr(0.199356)**2\n",
+    "# k23 = mpfr(0.124006)**2\n",
     "\n",
     "n1 = 0\n",
     "n2 = 0\n",
     "n3 = 0\n",
     "\n",
-    "d1= 0\n",
+    "d1= 1\n",
     "d2= -1\n",
     "d3= -1\n",
     "\n",
-    "J(n1,n2,n3,d1,d2,d3,k21,k22,k23)"
+    "J(n1,n2,n3,d1,d2,d3,k21,mpfr0,mpfr0)"
    ]
   },
   {
@@ -307,162 +380,6 @@
     "# TriaN(d1,d2,d3,k21,k22,k23,m1,m2,m3)\n",
     "J(n1,n2,n3,d1,d2,d3,k21,k22,k23)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3b2fd455",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str((n1,n2,n3,d1,d2,d3,k21,k22,k23))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "0c52914d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lenfdiogo=16\n",
-    "lenfbabis=33"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "ca811e11",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mattemp=np.reshape(np.fromfile('matdiogotobabisnewbasis', np.complex128),(lenfdiogo,lenfbabis))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "962a264e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.0001+0.j])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.take(mattemp[0],[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "dee048c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.0001+0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j,\n",
-       "       0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j,\n",
-       "       0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j,\n",
-       "       0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j,\n",
-       "       0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j,\n",
-       "       0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j, 0.    +0.j,\n",
-       "       0.    +0.j, 0.    +0.j, 0.    +0.j])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mattemp[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "27edee2f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mattemp_henry=np.reshape(np.fromfile('matdiogotobabisnewfun_henry', np.complex128),(lenfdiogo,lenfbabis))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "b6007784",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.1211203685061859e-15"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(abs(mattemp-mattemp_henry))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "4a5b5d5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  3.23117427e-27+0.00000000e+00j,\n",
-       "        3.23117427e-27+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00-4.93038066e-32j,\n",
-       "        0.00000000e+00+4.93038066e-32j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j,  0.00000000e+00+0.00000000e+00j,\n",
-       "        0.00000000e+00+0.00000000e+00j, -3.76158192e-37+0.00000000e+00j,\n",
-       "       -3.76158192e-37+0.00000000e+00j])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "i=15\n",
-    "mattemp[i]-mattemp_henry[i]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4244d66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
